platform/gitops/local/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: osc-apps
  labels:
    app.kubernetes.io/part-of: osc-is
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
